--- a/leaflifespan.Rmd
+++ b/leaflifespan.Rmd
@@ -4,7 +4,7 @@ output: html_document
 #file names
 - leaf_counts is file with calculated leaf counts and leaf lifespan data
 - LLSummary is file with means of LL - and other variables - by species and age; LMA data is merged to this file
-- subsets of LLSummary are created to omit babies or HATE for various analyses 
+- subsets of LLSummary are created to omit babies or HATE for various analyses
 
 # general results
 
@@ -17,7 +17,7 @@ output: html_document
 #next to do
 
 - check how overall plant leaf numbers changes with age, diameter
-    
+
 ```{r, echo=FALSE,results='hide', message=FALSE}
 # load packages
 
@@ -25,7 +25,7 @@ library(remake)
 create_bindings()
 
 # InvestmentSummary <- InvestmentSummary
-# names(InvestmentSummary)[1] <- "tag_ID"
+# names(InvestmentSummary)[1] <- "individual"
 
 LMA <- read.csv("data/LMA_short.csv",header=TRUE,stringsAsFactors=FALSE)%>%
   filter(species!="" & species!=" ")
@@ -41,7 +41,7 @@ raw_leaf_lifespan <- read.csv("data/leaderGrowthLL.csv",header=TRUE,stringsAsFac
 
 # Create new dataset taking only count measures, bc these are ultimately what we want
 leaf_lifespan <- raw_leaf_lifespan %>%
-  select(species,age,site,tag_ID,d_start,d_end,length_start,new_length,segment,lvs_start_count,lvs_end_count,lvs_new_count,new_but_shed_count)
+  select(species,age,site,individual,d_start,d_end,length_start,new_length,segment,lvs_start_count,lvs_end_count,lvs_new_count,new_but_shed_count)
 
 # where counts did not previously exists, set as 0; CHECK WITH DANIEL THAT "V" IS A SET "NAME" IN THESE FUNCTIONS
 for(v in c("lvs_start_count","lvs_end_count","lvs_new_count","new_but_shed_count")) {
@@ -58,7 +58,7 @@ leaves_per_length_spp <- read.csv("data/leaves_per_length.csv", header=TRUE, str
   group_by(species) %>%
   summarise(count_per_length = mean(count_per_length, na.rm=TRUE))
 
-# get spp average for all individuals 
+# get spp average for all individuals
 raw_leaf_lifespan$count_per_length <- leaves_per_length_spp$count_per_length[match(raw_leaf_lifespan$species, leaves_per_length_spp$species)]
 
 # if possible use data for that individual, if it exists; this code substitutes in species count per length #s for individuals where this data is available
@@ -92,7 +92,7 @@ raw_leaf_lifespan$LL_birth[which(is.infinite(raw_leaf_lifespan$LL_death))] <- NA
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
 #adding leaf, stem weight data from InvestmentSummary to raw_leaf_lifespan dataframe; can't RUN LINES 95-108 UNTIL INVESTMENT SUMMARY OPEN - THEN PROBLEM WITH PLYR
-#raw_leaf_lifespan <- left_join(raw_leaf_lifespan, InvestmentSummary, by = "tag_ID")
+#raw_leaf_lifespan <- left_join(raw_leaf_lifespan, InvestmentSummary, by = "individual")
 
 #adding columns to raw_leaf_lifespan to look at change across year
 raw_leaf_lifespan$change_shoot_diam <- raw_leaf_lifespan$d_end - raw_leaf_lifespan$d_start
@@ -154,7 +154,7 @@ col.spp <- c("red", "dark green", "blue", "purple", "orange", "light green","sal
 col.age <-c("purple","pink","green","orange","blue","dark green")
 pch.age <- c(1,1,16,16,16,16)
 labels.spp <- c("Banksia ericifolia","Boronia ledifolia","Conospermum ericifolium","Epacris micraphylla", "Grevillea buxifolia","Grevillea speciosa","Hakea teretifolia","Hemigenia purpurea","Leucopogon esquamatus","Persoonia lanceolata", "Petrophile puchella", "Phyllota phyllicoides", "Pimelea linifolia", "Pultanaea tuberculata")
-names(labels.spp) <- c("BAER","BOLE","COER","EPMI","GRBU","GRSP","HATE","HEPU","LEES","PELA","PEPU","PHPH","PILI","PUTU") 
+names(labels.spp) <- c("BAER","BOLE","COER","EPMI","GRBU","GRSP","HATE","HEPU","LEES","PELA","PEPU","PHPH","PILI","PUTU")
 labels.age <- c("1.4","2.4","5","7","9","32")
 
 #LL vs LMA
@@ -179,9 +179,9 @@ abline(mod)
 ```
 
 
-# Plotting final leaf number on the leader by diameter increase of the entire plant (basal diameter) and the leader (shoot diameter). 
+# Plotting final leaf number on the leader by diameter increase of the entire plant (basal diameter) and the leader (shoot diameter).
 
-Both show a strong correlation and species effect as expected. For the model with basal diameter there is a strong age effect, but not for shoot diameter. This is presumably because a shoot of a given species should always deploy the same number of leaves for the same diameter increase. In contrast, the whole plant will have many differing shoot numbers with age, so differing effects of a single shoot's increased diameter. Strangely, the model with basal diameter shows a stronger effect between diameter increase and leaf number. 
+Both show a strong correlation and species effect as expected. For the model with basal diameter there is a strong age effect, but not for shoot diameter. This is presumably because a shoot of a given species should always deploy the same number of leaves for the same diameter increase. In contrast, the whole plant will have many differing shoot numbers with age, so differing effects of a single shoot's increased diameter. Strangely, the model with basal diameter shows a stronger effect between diameter increase and leaf number.
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
 plot(change_basal_diam ~ leaf_new_total, raw_leaf_lifespan, log="xy", col=col.age[as.factor(age)], pch=16, xlab="leaf number on leader", ylab="change in basal diameter")
@@ -249,8 +249,8 @@ raw_leaf_lifespan %>% group_by(species) %>%
 
 #where does the [spp] comes from? This is the first place in the script it is used like this - I assume it could be any name?
 plot_LLvAge <- function(spp) {
-  plot(LL_birth ~ age, data=subset(raw_leaf_lifespan,species==spp), xlab="age", ylab="leaf lifespan (leaf births)", cex.axis=.8, las=1, 
-     main=labels.spp[spp], xlim=c(1,35), ylim=c(0,8), log="x", pch=16)  
+  plot(LL_birth ~ age, data=subset(raw_leaf_lifespan,species==spp), xlab="age", ylab="leaf lifespan (leaf births)", cex.axis=.8, las=1,
+     main=labels.spp[spp], xlim=c(1,35), ylim=c(0,8), log="x", pch=16)
   points(LL_birth_mean ~ age, data=subset(LLSummary, species==spp), cex=1.3, pch=8)
   points((LL_birth_mean+LL_birth_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=25)
   points((LL_birth_mean-LL_birth_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=24)
@@ -278,7 +278,7 @@ LMA %>% group_by(species) %>%
 
 plot_LMAvAge <- function(spp) {
   plot(LMA ~ age, data=subset(LMA,species==spp), xlab="age", ylab="LMA", cex.axis=.8, las=1, pch=16, log="x",
-  main=labels.spp[spp]) 
+  main=labels.spp[spp])
   points(LMA_mean ~ age, data=subset(LLSummary, species==spp), cex=1.3, pch=8)
   points((LMA_mean+LMA_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=25)
   points((LMA_mean-LMA_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=24)
@@ -305,10 +305,10 @@ for(n in names(labels.spp)) {
 The number of leaves on a leader is slightly affected by age however, with a decrease in leaf count along the leader with increasing age. This is what gives the perception of fewer leaves in some older plants. I'm not sure why this pattern looks stronger than leaf lifespan.
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
-  
+
 plot_lfcountvAge <- function(spp) {
   plot(lvs_end_total ~ age, data=subset(raw_leaf_lifespan,species==spp), xlab="age", ylab="leaf count along shoot", cex.axis=.8, las=1, pch=16, log="x",
-  main=labels.spp[spp]) 
+  main=labels.spp[spp])
   points(lvs_end_total_mean ~ age, data=subset(LLSummary, species==spp), cex=1.3, pch=8)
   points((lvs_end_total_mean+lvs_end_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=25)
   points((lvs_end_total_mean-lvs_end_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=24)
@@ -323,8 +323,8 @@ for(n in names(labels.spp)) {
   mod_lfcountvAge(n)
   summary(mod_lfcountvAge(n))
 }
-  
-  
+
+
 ```
 
 #models with shoot extenstion by age
@@ -335,7 +335,7 @@ These models show that for some species, shoot extension decreases enormously in
 
 plot_newlengthvAge <- function(spp) {
   plot(new_length ~ age, data=subset(raw_leaf_lifespan,species==spp), xlab="age", ylab="leader shoot extention", cex.axis=.8, las=1, pch=16, log="x",
-  main=labels.spp[spp]) 
+  main=labels.spp[spp])
   points(new_length_mean ~ age, data=subset(LLSummary, species==spp), cex=1.3, pch=8)
   points((new_length_mean+new_length_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=25)
   points((new_length_mean-new_length_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=24)
